src/test/ui/type/ascription/issue-47666.stderr
error: expected type, found `2`
  --> $DIR/issue-47666.rs:7:19
   |
LL |     let _ = Foo:B(2);
   |                -  ^ expected type
   |                |
   |                help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`

error: expected one of `!`, `(`, `.`, `::`, `;`, `<`, or `?`, found `{`
  --> $DIR/issue-47666.rs:10:19
   |
LL |     let _ = Foo:C { x: 1 };
   |                -  ^ expected one of 7 possible tokens
   |                |
   |                help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`

error: expected type, found reserved keyword `box`
  --> $DIR/issue-47666.rs:2:25
   |
LL |     let _ = Option:Some(vec![0, 1]);
   |                   -     ^^^^^^^^^^
   |                   |     |
   |                   |     expected type
   |                   |     in this macro invocation
   |                   |     this macro call doesn't expand to a type
   |                   help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0423]: expected value, found enum `Foo`
  --> $DIR/issue-47666.rs:5:13
   |
LL |     let _ = Foo:A;
   |             ^^^
   |
help: try using one of the enum's variants
   |
LL |     let _ = Foo::A:A;
   |             ^^^^^^
LL |     let _ = Foo::B:A;
   |             ^^^^^^
LL |     let _ = Foo::C:A;
   |             ^^^^^^

error[E0412]: cannot find type `A` in this scope
  --> $DIR/issue-47666.rs:5:17
   |
LL |     let _ = Foo:A;
   |                 ^ not found in this scope
   |
help: there is an enum variant `Foo::A`; try using the variant's enum
   |
LL |     let _ = Foo:Foo;
   |                 ^^^
help: maybe you meant to write a path separator here
   |
LL |     let _ = Foo::A;
   |                ^^
help: you might be missing a type parameter
   |
LL | fn bar<A>() {
   |       ^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0412, E0423.
For more information about an error, try `rustc --explain E0412`.
